--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -11,9 +11,14 @@
   <javaee.version>7.0</javaee.version>
   <spring.version>4.3.6.RELEASE</spring.version>
   </properties>
-  
-  
   <dependencies>
+  
+  <!-- link backend project -->
+  <dependency>
+  <groupId>net.kzn</groupId>
+  <artifactId>shoppingbackend</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  </dependency>
   <!-- JAVA EE API -->
   
 <dependency>
