--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     
@@ -30,7 +30,46 @@
     <version>${spring.version}</version>
 </dependency>
  
+ <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-orm</artifactId>
+    <version>${spring.version}</version>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-tx</artifactId>
+    <version>${spring.version}</version>
+</dependency>
+  <!-- H2 database -->  
+ 
+          <dependency>
+    <groupId>com.h2database</groupId>
+    <artifactId>h2</artifactId>
+    <version>1.4.197</version>
+    
+        <scope>runtime</scope>
+    
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.3.1.Final</version>
+</dependency>
+
+<!-- Database Connection Pooling -->
+
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-dbcp2</artifactId>
+    <version>2.4.0</version>
+</dependency>
+
   </dependencies>
+  
+  
   
   <build>
   <plugins>
@@ -44,12 +83,6 @@
         
         </configuration>
         </plugin>
-  
   </plugins>
-  
-  
-  
-  
-  
   </build>
 </project>
