--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -49,7 +49,18 @@
     <artifactId>jstl</artifactId>
     <version>1.2</version>
 </dependency>
-    
+    <!-- Jackson depedacy -->
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.5</version>
+</dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.9.5</version>
+</dependency>
   </dependencies>
   <build>
   <plugins>
