--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -67,8 +67,20 @@
     <version>2.4.0</version>
 </dependency>
 
+<!-- Jackson depedacy -->
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.8.7</version>
+</dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.8.7</version>
+</dependency>
+
   </dependencies>
-  
   
   
   <build>
