page d'error et gestion exception de stock

--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -24,6 +24,17 @@
     </dependency>
     
    <!-- SPRING -->
+   <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-webmvc</artifactId>
+    <version>${spring.version}</version>
+    <exclusions>
+    <exclusion>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    </exclusion>
+    </exclusions>
+</dependency>
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
@@ -47,8 +58,13 @@
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
     <version>1.4.197</version>
-    
         <scope>runtime</scope>
+            <exclusions>
+    <exclusion>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    </exclusion>
+    </exclusions>
     
 </dependency>
 
@@ -80,6 +96,19 @@
     <version>2.8.7</version>
 </dependency>
 
+<!-- SLF4J Logging -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.1</version>
+		</dependency>	
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.7.24</version>
+		</dependency>
+		
   </dependencies>
   
   
